docs_source/v3.0/Getting Started/welcome.md
---
title: "What is RevenueCat?"
slug: "welcome"
excerpt: "RevenueCat makes it easy to build and manage subscription apps on any platform"
hidden: false
metadata: 
  title: "Documentation | RevenueCat"
  description: "Build a customized mobile subscription business with RevenueCat. We do the heavy lifting of normalizing subscribers from any source and maintain a single source of truth for subscription status, so you can get back to building your app."
  image: 
    0: "https://files.readme.io/43ed2b3-Reddit__E.png"
    1: "Reddit – E.png"
    2: 2400
    3: 1260
    4: "#fbabb0"
createdAt: {}
updatedAt: "2021-07-22T20:19:25.122Z"
---
[block:image]
{
  "images": [
    {
      "image": [
        "https://files.readme.io/8e713ba-5e2613cf294dc3d63bdcf00c_build-front.svg",
        "5e2613cf294dc3d63bdcf00c_build-front.svg",
        246,
        150,
        "#f2545b"
      ],
      "sizing": "smart"
    }
  ]
}
[/block]
RevenueCat is the single source-of-truth for your subscription status across iOS, Android, and web. Whether you are building a new app or already have millions of subscribers, you can use RevenueCat to:

  * Fetch products, make purchases, and check subscription status with our [native SDKs](doc:installation). 
  * Host and [configure products](doc:entitlements) remotely from our dashboard. 
  * Analyze the most important metrics for your app business [in one place](doc:charts).
  * See customer transaction histories, chart lifetime value, and [grant promotional subscriptions](doc:customers).
  * Get notified of real-time events through [webhooks](doc:webhooks).
  * Send enriched purchase events to analytics and attribution tools with our easy integrations.

Sign up to [get started for free :fa-arrow-right:](https://app.revenuecat.com/signup)
[block:api-header]
{
  "title": "Getting started resources"
}
[/block]
With RevenueCat, you can keep track of all your app transactions in one place — whether your customers are charged through iOS, Android, or the web. No matter what platform they’re on, we make sure your users’ subscription status is always up to date.

Here are a few ways to get started:

  * Make purchases and send us receipts directly [from our client SDKs](doc:getting-started-1)
  * Use [our API](https://docs.revenuecat.com/reference) to send receipts from your server
[block:api-header]
{
  "title": "We're here to help!"
}
[/block]
#### **[Stack Overflow Community :fa-arrow-right:](https://stackoverflow.com/questions/tagged/revenuecat)**
Stack Overflow is a great place to get help with using RevenueCat in your code. Make sure you know [how to ask a good question](http://stackoverflow.com/help/how-to-ask) to get a quick response.

#### **[Developer Community :fa-arrow-right:](https://community.revenuecat.com)**
Join our new community to chat with other RevenueCat users about best practices or anything that's unclear.

#### **[Samples :fa-arrow-right:](doc:sample-apps)**
Explore some sample projects to get up and running in no time.
[block:api-header]
{
  "title": "Ready to start building?"
}
[/block]
Simplified in-app payments are just a few lines of code away.

### **[Sign up to get your free API key :fa-arrow-right:](https://app.revenuecat.com/signup)**

### **[Explore the docs :fa-arrow-right:](doc:getting-started-1)**
[block:api-header]
{
  "title": "Not a developer?"
}
[/block]
Although RevenueCat requires you to be (or hire) a developer, our dashboards and integrations are designed to be used by marketers, analysts, and customer success teams of forward-thinking app businesses. Talk to your engineering team about integrating with RevenueCat, or [contact our sales team :fa-arrow-right:](https://www.revenuecat.com/contact) to see how we can help.