docs_source/v3.1/Getting Started/welcome.md
---
title: "What is RevenueCat?"
slug: "welcome"
excerpt: "RevenueCat makes it easy to build, analyze and grow in-app purchases and subscriptions."
hidden: false
metadata: 
  title: "Documentation – RevenueCat"
  description: "Build a customized mobile subscription business with RevenueCat. We do the heavy lifting of normalizing subscribers from any source and maintain a single source of truth for subscription status, so you can get back to building your app."
  image: 
    0: "https://files.readme.io/00807ec-OG_image.png"
    1: "OG image.png"
    2: 1200
    3: 627
    4: "#e9acb0"
createdAt: {}
updatedAt: "2021-07-22T13:57:06.375Z"
---
[block:image]
{
  "images": [
    {
      "image": [
        "https://files.readme.io/283639d-homepage.jpg",
        "homepage.jpg",
        719,
        433,
        "#f5f7f9"
      ],
      "sizing": "smart"
    }
  ]
}
[/block]
RevenueCat is an open-source framework that provides a backend and a wrapper around StoreKit and Google Play Billing to make implementing in-app purchases and subscriptions easy. 
# How RevenueCat works

  * Configure your App Store, Play Store, and Stripe products in the RevenueCat dashboard
  * Configure integrations like webhooks, Slack, and Facebook Ads in the RevenueCat dashboard
  * Add our SDK to your app
  * Test in-app purchases
  * Ship an update

Whether you are building a new app or already have millions of customers, you can use RevenueCat to:

  * Fetch products, make purchases, and check subscription status with our [native SDKs](doc:installation). 
  * Host and [configure products](doc:entitlements) remotely from our dashboard. 
  * Analyze the most important metrics for your app business [in one place](doc:charts).
  * See customer transaction histories, chart lifetime value, and [grant promotional subscriptions](doc:customers).
  * Get notified of real-time events through [webhooks](doc:webhooks).
  * Send enriched purchase events to analytics and attribution tools with our easy integrations.

Sign up to [get started for free](https://app.revenuecat.com/signup).

# Getting started resources

With RevenueCat, you can keep track of all your app transactions in one place — whether your customers are charged through iOS, Android, or the web. As the single source of truth for your app business, we make sure your users’ subscription status is always up to date.

Here are a few ways to get started:

  * Follow our [Quickstart guide](doc:getting-started)
  * Migrating away from existing infrastructure? Check out our [migration guide](doc:migrating-existing-subscriptions)


# We're here to help!

#### **[Stack Overflow Community :fa-arrow-right:](https://stackoverflow.com/questions/tagged/revenuecat)**
Stack Overflow is a great place to get help with using RevenueCat in your code. Make sure you know [how to ask a good question](http://stackoverflow.com/help/how-to-ask) to get a quick response.

#### **[Developer Community :fa-arrow-right:](https://community.revenuecat.com)**
Join our new community to chat with other RevenueCat users about troubleshooting, best practices or anything that's unclear. 

#### **[Samples :fa-arrow-right:](doc:sample-apps)**
Explore some sample projects to get up and running in no time.

# Ready to start building?

Simplified in-app payments are just a few lines of code away.
[block:html]
{
  "html": "<style>\n.heading-2 .heading-text {\n  margin-top: 0px;\n  margin-bottom: 0px;\n  color: #000;\n  font-size: 16px;\n  font-weight: 700;\n}\n</style>"
}
[/block]
## [Sign up to get your **free API key** :fa-arrow-right:](https://app.revenuecat.com/signup)

## **[Explore the docs :fa-arrow-right:](doc:getting-started-1)**

# Not a developer?

Although RevenueCat requires you to be (or hire) a developer, our dashboards and integrations are designed to be used by marketers, analysts, and customer success teams of forward-thinking app businesses. Talk to your engineering team about integrating with RevenueCat, or [contact our sales team](https://www.revenuecat.com/contact) to see how we can help.